# ai-engineering-roadmap

./: .cspell.json  .editorconfig  .env.example  .gitattributes  .gitignore  .mypy.ini  .pre-commit-config.yaml  .prettierignore  AI_CONTRIB_LOG.yaml  CHANGELOG.md  CODEX_TASKS.md  CONTRIBUTING.md  README.d  README.md  RESOURCES.md  RESOURCE_OVERVIEW.md  ROADMAP_2025_SETUP.md  RULES_OF_AI.md  ai-contrib-log.yaml  docker-compose-db.yml  docker-compose-mcp-consolidated.yml  docker-compose-mcp.yml  docker-compose.dev.yml  docker-compose.yml  index.html  package.json  pnpm-lock.yaml  pyproject.toml  redundancy-report.md  roadmap-visualization.html  roadmap.json  turbo.json
.ai/: AGENTS.md  RULES_FOR_AI.md  policy.yaml  registry.yml
.ai/config/: code-reviewer-agent.json  codex.json
.ai/context/: project-context.md  project_context.md
.ai/schemas/: registry.schema.json  task-delegation.schema.json
.devcontainer/: Dockerfile.dev  devcontainer.json  install-1password.sh
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  codeowners.txt  copilot-instructions.md  license.txt  pull-request-template.md  settings.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.yml  resource_suggestion.md  roadmap_enhancement.yml
.github/issue-template/: ai-task.yml  ai_task.yml  bug-report.yml  feature-request.md  resource-suggestion.md
.github/workflows/: 1password-setup.yml  ai-code-review.yml  ai-orchestration-engine.yml  ai-orchestration.yml  ai-security-scan.yml  backend-ci.yml  ci.yml  copilot-setup-steps.yml  deploy-and-update.yml  deploy-pages.yml  deploy-pages.yml.disabled  frontend-ci.yml  guardrails.yml  link-check-config.json  mlc_config.json  quality-assurance.yml  update-roadmap.yml  update-roadmap.yml.disabled  validate-roadmap.yml
ai/: AGENT.md  policy.yaml
ai/config/: code-reviewer-agent.json  codex.json  copilot.json  jules.json
ai/context/: project-context.md
ai/schemas/: agent-config.schema.json
alembic/versions/: env.py
apps/api/: .env.example  Dockerfile  alembic.ini  dev-requirements.txt  package.json  pyproject.toml  readme.md  requirements.txt
apps/api/scripts/: fetch_secrets.py
apps/api/src/: __init__.py  config.py  main.py
apps/api/src/core/models/: base.py
apps/api/src/routers/: __init__.py  health.py  ollama.py  roadmap.py
apps/api/src/services/: roadmap_sequence.py
apps/api/tests/: conftest.py  test_main.py
apps/api/tests/services/: test_roadmap_sequence.py
apps/web/: Dockerfile  eslint.config.mjs  healthcheck.js  jest.setup.js  next.config.js  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
assets/: Home-7j9S7DPY.css  Home-CQn90K2_.js  Home-CQn90K2_.js.map  Home-Crb3ttsg.css  Home-kCwMEwGv.js  Home-kCwMEwGv.js.map  index-1f2e785f.css  index-3302e8b5.js  index-3302e8b5.js.map  index-8cf8b9ae.css  index-BzBdhxls.js  index-BzBdhxls.js.map  index-CF5MJ7t8.css  index-ba9ea1d4.js  index-ba9ea1d4.js.map  index-dcee250d.css  index-encPpsdS.js  index-encPpsdS.js.map  index-f24a0875.js  index-f24a0875.js.map
backend/: .env.example  Dockerfile  dev-requirements.txt  requirements.txt
backend/src/: main.py
backend/tests/: conftest.py  test_main.py
code/: README.md
config/: roadmap-config-2025.json
content/: README.md
data/: roadmap.json
docs/: 1PASSWORD_SETUP.md  404.html  AI_PARTNERSHIP.md  CHEAT_SHEET.md  CI_AUTOMATION.md  CI_DOCUMENTATION.md  COLOR_GUIDE.md  LEARNING_PSYCHOLOGY.md  PHASE1_IMPLEMENTATION_SUMMARY.md  PHASE2_IMPLEMENTATION_SUMMARY.md  PROJECT_STRUCTURE.md  QUALITY_GATES.md  README.md  ROADMAP_UPDATE_SUMMARY.md  advanced_confidence_log.md  feature_plan.md  model_selection_guide.md  roadmap.mmd  url-corrections.md
docs/AGENTS/: feature_plan.md
docs/adr/: 000-template-for-new-adr.md
docs/assets/: index-Cj2EirFU.js  index-Cj2EirFU.js.map  index-n6IzIBwL.css
docs/quickstart/: ONE_COMMAND_SETUP.md
frontend/: .env.example  index.html  jest.config.js  package-lock.json  package.json  stats.html  tsconfig.json  vite.config.ts  vitest.config.ts
frontend-next/: .prettierignore  .prettierrc.js  Dockerfile.optimized  README.md  jest.config.js  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.mjs  tailwind.config.ts
frontend-next/public/: manifest.json
frontend-next/scripts/: migrate.js
frontend/coverage/: clover.xml  index.html
frontend/public/: 404.html  index.html  roadmap.json
frontend/src/: App.vue  main.ts
frontend/tests/: App.test.js  Home.test.js  roadmapService.test.js  setup.ts
mcp-servers/custom/: Dockerfile  docker-python-config.js  package-lock.json  package.json  python-config.json  server.js  test-python.js  test-ws-client.js
notes/: README.md
progress/: README.md
progress/weekly-reviews/: week-01-review.md  week-04-review.md
projects/github-stats-cli/: README.md
roadmaps/: README.md  roadmap.json
scripts/: check-kebab-case.py  check-kebab-case.py.backup  check-mcp-server.sh  check-mcp-tools.sh  check_kebab_case.py  cleanup-redundancies.sh  configure_python_env.py  dev-setup.sh  devcontainer-recovery.sh  fetch_secrets.py  fix-docker-env.sh  generate-roadmap-visual.py  generate_roadmap_visual.py  immediate-actions.sh  mcp-maintenance.sh  monitor-mcp-usage.sh  pre-commit-check.sh  setup-github-ssh.sh  setup-mcp-cron.sh  setup-roadmap-2025.sh  setup_dev_env.sh  update-roadmap-visuals.sh  validate-pr.sh  validate_pr.sh  validate_roadmap.py
scripts/ai/: agent-monitor.py  delegate-task.py  delegate_task.py  run-orchestration.py  run_orchestration.py  sync_context.py  update_audit_log.py  update_roadmap_progress.py
scripts/ci/: ensure-doctrine-present.sh
scripts/dev/: one-command-start.sh  one_command_start.sh
scripts/development/: validate-naming-conventions.ts
scripts/pre-commit/: pre-commit-hook.sh
scripts/setup/: core_env.sh  onepassword.sh  secrets.sh  setup-1password.sh  setup-ai-agents.sh  setup-dev-env.sh  setup-ollama.sh  validate-enviroment.sh
shared/contracts/: api-schema.yaml
vscode/: extensions.json  launch.json  settings.json  tasks.json
(+214 files in other folders)
