[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "brAInwav"
version = "0.1.0"
description = "brAInwav - The gold standard for AI-powered project automation"
authors = [
    { name = "Jamie Scott Craik", email = "jamie.craik@icloud.com" },
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# Core runtime dependencies for the application
dependencies = [
    "ollama>=0.1.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "ipykernel>=6.29.5",
    "pydantic-settings>=2.9.1",
    "pydantic-ai>=0.2.0,<0.2.12",
    "watchdog>=3.0.0",
    "pypdf>=5.0.0",
    "python-magic>=0.4.27",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "plyer>=2.1.0",
    # LLM Orchestration
    "langchain>=0.1.0",
    "langchain-community>=0.0.20",
    "langchain-openai>=0.0.8",
    "langchain-anthropic>=0.1.0",
    "tiktoken>=0.5.0",
    "tenacity>=8.2.0",
    # Async & API Support
    "aiohttp>=3.9.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    # Modern UI Framework
    "nicegui>=1.4.0",
    "gradio>=5.0.0",
    "google-cloud-aiplatform>=1.96.0",
    "transformers>=4.52.4",
    # Transformers Ecosystem
    "tensorflow>=2.15.0,<2.17.0",
    "datasets>=2.0.0",
    "tokenizers>=0.15.0",
    "safetensors>=0.3.0",
]

# Development-only dependencies
[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=1.0.0",
    "black>=24.4.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.5.0",
    "coverage>=7.3.0",
    "hypothesis>=6.88.0",
    "faker>=20.0.0",
]

[project.urls]
Homepage = "https://github.com/jamiecraik/brAInwav-llm_project-scaffold"
Repository = "https://github.com/jamiecraik/brAInwav-llm_project-scaffold"
Issues = "https://github.com/jamiecraik/brAInwav-llm_project-scaffold/issues"

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4"] # Added Flake8-bugbear and Flake8-comprehensions
ignore = [
    "E501",  # Handled by Black
    "E402",  # module import not at top of file
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

# MyPy is now configured to be strict, catching potential type errors
[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.hatch.build.targets.wheel]
packages = ["backend/src"]
